[package]
name = "sdfu"
version = "0.3.1-alpha.1"
authors = ["Gray Olson <gray@grayolson.com>"]
description = "Signed Distance Field (Function) Utilities. Contains functions for creating, combining, modifying, and using analytic SDFs for computer graphics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/termhn/sdfu"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
glam = { version = "0.20.2", optional = true }
vek = { version = "0.15.6", optional = true }
nalgebra = { version = "0.30.1", optional = true }
ultraviolet = { version = "0.9.0", optional = true }
# ultraviolet = { path = "../ultraviolet", optional=true }

[dev-dependencies]
vek = "0.15.6"
nalgebra = "0.30.1"
ultraviolet = "0.9.0"
